force-app/main/default/objects/CEPEncrypt__c/CEPEncrypt__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Custom setting used for storing necessary data for encryption</description>
    <label>CEP Encrypt</label>
</CustomObject>