force-app/main/default/objects/CEPEncrypt__c/fields/AlgorithmName__c.field-meta.xml
<CustomField>
    <fullName>AlgorithmName__c</fullName>
    <description>name of the algorithm to use in encryption</description>
    <label>Algorithm Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>