force-app/main/default/objects/CEPEncrypt__c/fields/Key__c.field-meta.xml
<CustomField>
    <fullName>Key__c</fullName>
    <description>key used for encryption</description>
    <label>Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>