force-app/main/default/objects/CEPEncrypt__c/fields/Vector__c.field-meta.xml
<CustomField>
    <fullName>Vector__c</fullName>
    <description>vector used for encrypting</description>
    <label>Vector</label>
    <length>255</length>
    <type>Text</type>
</CustomField>